--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
+
 
 div{
 
     
     width: 100%;
     text-align: center;
-    margin-top: 150px; 
+    margin-top: 50px; 
     padding: 100px;
     border: solid 1px ;
     background-color: tomato;
@@ -21,4 +23,13 @@ div{
     font-size: 20px;
     text-transform: capitalize;
     font-weight: bolder;
+}
+
+.card{
+
+
+    width: 100%;
+    line-height: 30px;
+    text-shadow: white;
+    justify-content: center;
 }
